--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="container"></div>
   <script src="component.js"></script>
   <script>
     const d5Onboarding = new D5Onboarding
