--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>img {
+    width: 50px;
+    height: 50px;
+  }</style>
 </head>
 <body>
   <div id="container"></div>
-  <script src="component.js"></script>
+  
+  <script src="src/index.js"></script>
   <script>
     const d5Onboarding = new D5Onboarding({
       container: '#container',
