feat(message): add error message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   }</style>
 </head>
 <body>
-  <div id="container"></div>
+  <div id="container">
+ 
+  </div>
   
   <script src="src/index.js"></script>
   <script>
