feat(sign-up): add sign up api

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script>
     const d5Onboarding = new D5Onboarding({
       container: '#container',
+      url: 'bigcommerce'
     })
     d5Onboarding.init()
   </script>
